[gd_scene load_steps=20 format=4 uid="uid://dnluh01o141d4"]

[ext_resource type="Script" path="res://theremin.gd" id="1_mqdv8"]
[ext_resource type="Script" path="res://addons/godot_sfxr/SfxrStreamPlayer3D.gd" id="1_xsb8r"]
[ext_resource type="Material" uid="uid://dmgvoay33kbyo" path="res://materials/theremin_base.tres" id="3_fym58"]
[ext_resource type="PackedScene" uid="uid://b0r6edl74ddo7" path="res://addons/godot-xr-tools/interactables/interactable_slider.tscn" id="4_83f55"]
[ext_resource type="Material" uid="uid://r0sy8350ujvk" path="res://materials/theremin_track.tres" id="5_b0swh"]
[ext_resource type="Material" uid="uid://cb0w5x35j58nv" path="res://materials/theremin_handle.tres" id="5_kyiwd"]
[ext_resource type="PackedScene" uid="uid://bddj5m7ull6g0" path="res://addons/godot-xr-tools/interactables/interactable_handle.tscn" id="6_hukli"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="7_1j24s"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/grab_points/theremin_grab_point_hand_left.gd" id="7_c8y8c"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="8_ibwva"]
[ext_resource type="PackedScene" uid="uid://ca3daqmpo0tua" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_redirect.tscn" id="9_wmlu6"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_fa51h"]
data = PackedByteArray("BAsRGB4kKS80ODxAQ0VHSElJSEdGQ0A9OTUwKyUfGRMMBf738erk3tjTzsnFwb67ubi3t7e4ury+wsXKztTZ3+Xr8vj/Bw0UGiAmKzE1Oj5BREZISUlJSEdFQj88NzMuKCMdFxAKA/v17uji3NbRzMfDwL26ube3t7e5ur3Aw8fL0Nbb4efu9PsCCRAWHCIoLTI3Oz9CRUdISUlJSEZEQT46NjEsJiEaFA4H//ny7OXf2dTPysbCv7y6uLe3t7i5u77BxMnN0tjd4+rw9/0FCxIYHyQqLzQ5PUBDRUdISUlIR0VDQDw5NC8qJB4YEgsF/fbw6ePd19LNyMTBvru5uLe3t7i6vL/CxsrP1Nrg5uzy+QEHDhQbIScsMTY6PkFERkhJSUlIR0RCPzs3Mi0oIhwWDwkC+vTt5+Hb1dDLx8O/vbq4t7e3t7m7vcDDyMzR1tzi6O71/AMKEBcdIykuMzg8P0JFR0hJSUlIRkRBPTo1MCsmIBoTDQb/+PHr5d/Z087KxcK+vLm4t7e3uLm7vsHFyc7T2N7k6vH3/gYMExkfJSswNTk9QUNGR0lJSUhHRUNAPDgzLykkHhcRCgT89u/p4tzX0czIxMC9u7m4t7e3uLq8v8PGy9DV2uDm7fP6AggPFRsiJy0yNzs+QkRGSElJSUhGREI+OzYyLSchGxUPCAH68+3m4NrVz8vGwr+8uri3t7e4ubu9wMTIzdLX3ePp7/b8BAsRGB4kKS80ODxAQ0VHSElJSEdGQ0A9OTUwKyUfGRMMBf738erk3tjTzsnFwb67ubi3t7e4ury+wsXKztTZ3+Xr8vj/Bw0UGiAmKzE1Oj5BREZISUlJSEdFQj88NzMuKSMdFxAKA/v17uji3NbRzMfDwL26ube3t7e5ur3Aw8fL0Nbb4efu9PsCCRAWHCIoLTI3Oz9CRUdISUlJSEZEQT46NjEsJiEaFA4H//ny7OXf2tTPysbCv7y6uLe3t7i5u77BxMnN0tjd4+rw9/0FCxIYHyQqLzQ5PUBDRUdISUlIR0VDQD05NC8qJB4YEgsF/fbw6ePd19LNyMTBvru5uLe3t7i6vL/CxsrP1Nrg5uzy+QEHDhQbIScsMTY6PkFERkhJSUlIR0VCPzs3Mi0oIhwWDwkC+vTt5+Hb1dDLx8O/vbq4t7e3t7m7vcDEyMzR1tzi6O71/AMKEBcdIykuMzg8P0JFR0hJSUlIRkRBPTo1MCsmIBoTDQb/+PHr5d/Z087KxcK+vLq4t7e3uLm7vsHFyc7T2N7k6vH3/gYMExkfJSswNTk9QUNGR0lJSUhHRUNAPDgzLykkHhcRCgT89u/p4tzX0czIxMC9u7m4t7e3uLq8v8PGy9DV2uDm7fP6AggPFRwiJy0yNzs+QkRGSElJSUhGREI+OzYyLSchGxUPCAH68+3m4NrVz8vGwr+8uri3t7e4ubu9wMTIzdLX3ePp7/b8BAsRGB4kKS80ODxAQ0VHSElJSEdGQ0A9OTUwKyUfGRMMBf738erk3tjTzsnFwb67ubi3t7e4ury+wsXKztTZ3+Xr8vj/Bw0UGiAmKzE1Oj5BREZISUlJSEdFQj88NzMuKSMdFxAKA/v17uji3NbRzMfDwL27ube3t7e5ur3Aw8fL0Nbb4efu9PsCCRAWHCIoLTI3Oz9CRUdISUlJSEZEQT46NjEsJiEbFA4H//ny7OXf2tTPysbCv7y6uLe3t7i5u77BxMnN0tjd4+rw9/0FDBIYHyQqLzQ5PUBDRUdISUlIR0VDQD05NC8qJB4YEgsF/fbw6ePd19LNyMTBvru5uLe3t7i6vL/CxsrP1Nrg5uzy+QEHDhQbIScsMTY6PkFERkhJSUlIR0VCPzs3Mi0oIhwWDwkC+vTt5+Hb1dDLx8O/vbq4t7e3t7m7vcDEyMzR1tzi6O71/AMKEBcdIykuMzg8P0JFR0hJSUlIRkRBPTo1MCsmIBoTDQb/+PHr5d/Z087KxcK+vLq4t7e3uLm7vsHFyc7T2N7k6vH3/gYMExkfJSswNTk9QUNGR0lJSUhHRUNAPDgzLykkHhcRCgT89u/p4tzX0czIxMC9u7m4t7e3uLq8v8PGy9DV2uDm7fP6AggPFRwiJy0yNzs+QkRGSElJSUhGREI+OzYyLSchGxUPCAH68+3m4NrVz8vGwr+8uri3t7e4ubu9wMTIzdLX3ePp7/b8BAsRGB4kKS80ODxAQ0VHSElJSEdGQ0A9OTUwKyUfGRMMBf738erk3tjTzsnFwb67ubi3t7e4ury+wsXKztTZ3+Xr8vj/Bw0UGiAmKzE1Oj5BREZISUlJSEdFQj88NzMuKSMdFxAKA/v17uji3NbRzMfDwL27ube3t7e5ur3Aw8fL0Nbb4efu9PsCCRAWHCIoLTI3Oz9CRUdISUlJSEZEQT46NjEsJiEbFA4H//ny7OXf2tTPysbCv7y6uLe3t7i5u77BxMnN0tjd4+rw9/0FDBIYHyQqLzQ5PUBDRUdISUlIR0VDQD05NC8qJB4YEgsF/fbw6ePd19LNyMTBvru5uLe3t7i6vL/CxsrP1Nrg5uzz+QEHDhQbIScsMTY6PkFERkhJSUlIR0VCPzs3Mi0oIhwWDwkC+/Tt5+Hb1dDLx8O/vbq4t7e3t7m7vcDEyMzR1tzi6O71/AMKEBcdIykuMzg8P0JFR0hJSUlIRkRBPTo1MCsmIBoTDQb/+PHr5d/Z087KxcK+vLq4t7e3uLm7vsHFyc7T2N7k6vH3/gYMExkfJSswNTk9QUNGR0lJSUhHRUNAPDgzLykkHhcRCgT89u/p4tzX0czIxMC9u7m4t7e3uLq8v8PGy9DV2uDm7fP6AggPFRwiJy0yNzs+QkRGSElJSUhGREI+OzYyLSchGxUPCAH68+3m4NrVz8vGwr+8uri3t7e4ubu9wMTIzdLX3ePp7/b8BAsRGB4kKS80ODxAQ0VHSElJSUdGQ0A9OTUwKyUfGRMMBf738erk3tjTzsnFwb67ubi3t7e4ury+wsXKztTZ3+Xr8vj/Bw0UGiAmKzE1Oj5BREZISUlJSEdFQj88NzMuKSMdFxAKA/v17uji3NbRzMfDwL27ube3t7e5ur3Aw8fL0Nbb4efu9PsCCRAWHCIoLTI3Oz9CRUdISUlJSEZEQT46NjEsJiEbFA4H//ny7OXf2tTPysbCv7y6uLe3t7i5u77BxMnN0tjd4+rw9/0FDBIYHyUqLzQ5PUBDRUdISUlIR0VDQD05NC8qJB4YEgsF/fbw6ePd19LNyMTBvru5uLe3t7i6vL/CxsrP1Nrg5uzz+QEHDhQbIScsMTY6PkFERkhJSUlIR0VCPzs3Mi0oIhwWDwkC+/Tt5+Hb1dDLx8O/vbq5t7e3t7m7vcDEyMzR1tzi6O71/AMKEBcdIykuMzg8P0JFR0hJSUlIRkRBPTo1MCsmIBoTDQb/+PHr5d/Z087KxcK+vLq4t7e3uLm7vsHFyc7T2N7k6vH3/gYMExkfJSswNTk9QUNGR0lJSUhHRUNAPDg0LykkHhcRCgT89u/p4tzX0czIxMC9u7m4t7e3uLq8v8PHy9DV2uDm7fP6AggPFRwiJy0yNzs+QkRGSElJSUhGREI+OzYyLSchGxUPCAH68+3m4NrVz8vGwr+8uri3t7e4ubu9wMTIzdLX3ePp7/b8BAsRGB4kKS80ODxAQ0VHSElJSUdGQ0A9OTUwKyUfGRMMBf738erk3tjTzsnFwb67ubi3t7e4ury+wsXKztTZ3+Xr8vj/Bw0UGiAmKzE1Oj5BREZISUlJSEdFQj88NzMuKSMdFxAKA/v17uji3NbRzMfDwL27ube3t7e5ur3Aw8fL0Nbb4efu9PsCCRAWHCIoLTI3Oz9CRUdISUlJSEZEQT46NjEsJiEbFA4HAfny7OXf2tTPysbCv7y6uLe3t7i5u77BxMnN0tjd4+rw9/0FDBIYHyUqLzQ5PUBDRUdISUlIR0VDQD05NC8qJB4YEgsF/fbw6ePd19LNyMTBvru5uLe3t7i6vL/CxsrP1Nrg5uzz+QEHDhQbIScsMTY6PkFERkhJSUlIR0VCPzs3Mi0oIhwWDwkC+/Tt5+Hb1dDLx8O/vbq5t7e3t7m7vcDEyMzR1tzi6O71/AMKEBcdIykuMzg8P0JFR0hJSUlIRkRBPTo1MCsmIBoTDQb/+PE=")
loop_mode = 1
loop_end = 15
mix_rate = 2200

[sub_resource type="BoxMesh" id="BoxMesh_v0p61"]
size = Vector3(0.65, 0.05, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_vfdja"]
size = Vector3(0.65, 0.05, 0.03)

[sub_resource type="PrismMesh" id="PrismMesh_eah22"]
size = Vector3(0.16, 0.1, 0.005)

[sub_resource type="BoxMesh" id="BoxMesh_x6i4r"]
material = ExtResource("5_b0swh")
size = Vector3(0.625, 0.005, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_ouwtk"]
size = Vector3(0.1, 0.05, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_kwsv8"]
material = ExtResource("5_kyiwd")
size = Vector3(0.1, 0.05, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_qquej"]
size = Vector3(0.1, 0.05, 0.2)

[node name="theremin" type="Node3D"]
script = ExtResource("1_mqdv8")

[node name="SfxrStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamWAV_fa51h")
volume_db = -30.0
bus = &"theremin_effects"
script = ExtResource("1_xsb8r")
wave/type = 2
sample_params/sound_vol = 0.25
sample_params/sample_rate = 22050.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.25
envelope/punch_time = 0.0
envelope/decay_time = 0.0
frequency/start_frequency = 0.3
frequency/min_freq_cutoff = 0.0
frequency/slide = 0.0
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0

[node name="Frame" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Frame"]
material_override = ExtResource("3_fym58")
mesh = SubResource("BoxMesh_v0p61")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Frame"]
shape = SubResource("BoxShape3D_vfdja")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.275194, 0.0275288, 0)
mesh = SubResource("PrismMesh_eah22")

[node name="barMesh" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0136103, 0.023442, 0)
mesh = SubResource("BoxMesh_x6i4r")
skeleton = NodePath("../../SliderOrigin/InteractableSlider/SliderBody")

[node name="SliderOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.198172, 0, 0)

[node name="InteractableSlider" parent="SliderOrigin" instance=ExtResource("4_83f55")]
cube_scale = null
slider_limit_max = 0.45
slider_steps = 0.05

[node name="SliderBody" type="StaticBody3D" parent="SliderOrigin/InteractableSlider"]

[node name="handleCollision" type="CollisionShape3D" parent="SliderOrigin/InteractableSlider/SliderBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_ouwtk")

[node name="handleMesh" type="MeshInstance3D" parent="SliderOrigin/InteractableSlider/SliderBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("BoxMesh_kwsv8")

[node name="GrabPointHandLeft" parent="SliderOrigin/InteractableSlider/SliderBody/handleMesh" instance=ExtResource("7_1j24s")]
script = ExtResource("7_c8y8c")

[node name="GrabPointHandRight" parent="SliderOrigin/InteractableSlider/SliderBody/handleMesh" instance=ExtResource("8_ibwva")]
script = ExtResource("7_c8y8c")

[node name="handleOrigin" type="Node3D" parent="SliderOrigin/InteractableSlider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="InteractableHandle" parent="SliderOrigin/InteractableSlider/handleOrigin" instance=ExtResource("6_hukli")]
collision_layer = 393216
grab_distance = 0.1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SliderOrigin/InteractableSlider/handleOrigin/InteractableHandle"]
shape = SubResource("BoxShape3D_qquej")

[node name="GrabPointRedirectLeft" parent="SliderOrigin/InteractableSlider/handleOrigin/InteractableHandle" node_paths=PackedStringArray("target") instance=ExtResource("9_wmlu6")]
target = NodePath("../../../SliderBody/handleMesh/GrabPointHandLeft")

[node name="GrabPointRedirectRight" parent="SliderOrigin/InteractableSlider/handleOrigin/InteractableHandle" node_paths=PackedStringArray("target") instance=ExtResource("9_wmlu6")]
target = NodePath("../../../SliderBody/handleMesh/GrabPointHandRight")
